tests/samples/negative/control_flow/for_range_non_integer.ax
module for_range_non_integer;

fn main() -> i32 {
    for i in range(true) {
        return i;
    }
    return 0;
}
